# proyecto-si783-2026-i-u3-analizador-de-rendimiento-de-consultas-1

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  FD01-EPIS-Informe de Factibilidad.docx  FD01-Informe-Factibilidad.md  FD02-EPIS-Informe Vision.docx  FD02-Informe-Vision.md  FD03-EPIS-Informe Especificación Requerimientos.docx  FD04-EPIS-Informe Arquitectura de Software.docx  Makefile  README.md  jreleaser.yml  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml  user-story.yml
.github/workflows/: integration-tests.yml  quality-pages.yml  release.yml
docs/: API.md  CASSANDRA_ADAPTER.md  Calidad-y-Evidencias.md  DICCIONARIO-DE-DATOS.md  ESTANDARES-DE-PROGRAMACION.md  Estandar-de-Programacion.md  FD01-Informe-Factibilidad.md  FD02-Informe-Vision.md  FD03-EPIS-Informe Especificación Requerimientos.md  FD03-Especificacion-Requerimientos.md  FD04-EPIS-Informe Arquitectura de Software.md  FD04-Informe-Arquitectura.md  FD05-EPIS-Informe ProyectoFinal.md  FD05-Informe-Final.md  Github-Project-y-Trazabilidad.md  INDEX.md  Manual-de-Usuario.md  README.md  VS_CODE_EXTENSION.md
docs/adapters/: DYNAMODB.md
docs/cli/: ANALYZE_COMMAND.md
integrations/vscode-query-analyzer/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
query_analyzer/: __init__.py  mcp_server.py
query_analyzer/adapters/: __init__.py  base.py  elasticsearch.py  elasticsearch_parser.py  models.py  redis.py  redis_parser.py  serializer.py
query_analyzer/api/: __init__.py  app.py  router.py  schemas.py
query_analyzer/cli/: main.py  utils.py
query_analyzer/core/: __init__.py  ai_analyzer.py  connection_diagnostics.py
query_analyzer/tui/: app.py  connection_state.py  export_analysis.py  history_manager.py  report_renderer.py
scripts/: build-mutation-report.py  build-pages.py  seed.ps1
tests/: conftest.py
tests/bdd/: query_analysis.feature  test_query_analysis_steps.py
tests/contract/: test_supported_engines_contract.py
tests/integration/: test_cockroachdb_integration.py  test_diagnostics_integration.py  test_dynamodb_emulated_integration.py  test_elasticsearch_integration.py  test_influxdb_integration.py  test_mongodb_integration.py  test_mssql_integration.py  test_mysql_integration.py  test_neo4j_integration.py  test_postgresql_integration.py  test_redis_integration.py  test_sqlite_integration.py  test_yugabytedb_integration.py
tests/ui/: package-lock.json  package.json  playwright.config.ts
tests/unit/: test_adapter_registry.py  test_ai_analyzer.py  test_anti_pattern_detector.py  test_anti_pattern_detector_integration.py  test_api_app.py  test_api_router.py  test_base_adapter.py  test_build_pages.py  test_cassandra_adapter.py  test_cli_api.py  test_cli_profile.py  test_cli_responsive_output.py  test_cockroachdb_adapter.py  test_connection_diagnostics.py  test_dynamodb_adapter.py  test_elasticsearch_adapter.py  test_factual_parser_contracts.py  test_influxdb_adapter.py  test_mcp_server.py  test_models_v2_phase1.py  test_mongodb_adapter.py  test_mssql_adapter.py  test_mysql_adapter.py  test_neo4j_adapter.py  test_questionary_prompts.py  test_redis_adapter.py  test_sqlite_adapter.py  test_tui_analysis_screen_bindings.py  test_tui_analysis_screen_redesign.py  test_tui_connection_screen.py  test_tui_diagnostics.py  test_tui_history_manager.py  test_tui_profile_selector.py  test_yugabytedb_adapter.py
(+37 files in other folders)
