[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-analyzer"
version = "2.3.1"
description = "Analizador de planes de ejecucion y metricas reales para multiples motores"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.0",
    "pymssql>=2.3.2",
    "pymongo>=4.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "textual>=8.2.2",
    "typer>=0.24.1",
    "cryptography>=42.0.0",
    "redis>=5.0",
    "neo4j>=5.0.0",
    "influxdb-client>=1.36.0",
    "boto3>=1.34.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "mcp>=1.27,<2",
    "requests>=2.32.0",
]

[tool.setuptools.packages.find]
include = ["query_analyzer*"]

[project.scripts]
qa = "query_analyzer.cli.main:main"
query_analyzer = "query_analyzer.cli.main:main"
qa-api = "query_analyzer.api.app:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.9",
    # Type stubs para librerías externas
    "types-psycopg2>=2.9.21.19.1",
    "types-PyMySQL>=1.1.0.20240815",
    "types-PyYAML>=6.0.12.20240917",
    "types-redis>=4.6.0",
    "types-requests>=2.32.4.20260107",
    "moto[dynamodb]>=4.2.0",
    # Cassandra driver (optional - Windows build issues on Python 3.14)
    # For local Cassandra integration testing: pip install cassandra-driver==3.29.3
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
# E, F, W: Errores base | I: isort | N: pep8-naming | UP: pyupgrade | B: flake8-bugbear | D: pydocstyle
select = ["E", "F", "W", "I", "N", "UP", "B", "D"]
ignore = ["E501"]  # Ignorar line-length (lo maneja ruff-format)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B017"]
"query_analyzer/cli/*" = ["B008"]  # B008: Typer options designed for use in defaults
"query_analyzer/tui/*.py" = ["D"]
"query_analyzer/tui/widgets/*.py" = ["D"]
"query_analyzer/tui/screens/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # En false temporalmente hasta tipar el 100% del proyecto
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "^tests/",
    "^build/",
    "^dist/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "influxdb_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cassandra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymssql.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "elasticsearch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true
